--- a/recipe_collector/authentication/templates/authentication/register.html
+++ b/recipe_collector/authentication/templates/authentication/register.html
@@ -87,6 +87,13 @@
 <body>
     <div class="register-container">
         <h2>Register</h2>
+            {% if messages %}
+        <ul style="color: red; text-align: left;">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
