--- a/favourite_tastebook/recipe_manager/static/css/style.css
+++ b/favourite_tastebook/recipe_manager/static/css/style.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 body {
@@ -11,13 +14,12 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 25% 1fr 30%;
+  grid-template-columns: 25% 20% 55%; /* Центральный блок стал уже */
   grid-template-rows: auto auto auto;
   grid-template-areas:
     "semantic-search list-of-ingredients favorites-based"
     "added-ingredients list-of-ingredients recipe-based"
     "favorite-ingredients list-of-ingredients recipe-based";
-
   height: 100vh;
   gap: 1rem;
   padding: 1rem;
@@ -49,10 +51,13 @@ body {
   border-radius: 10px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
+  height: 100%;
+  min-height: 100px;
 }
 .block:hover {
   transform: scale(1.02);
 }
+
 
 .btn {
   display: inline-block;
@@ -164,6 +169,6 @@ input:focus {
       "favorite-ingredients"
       "list-of-ingredients"
       "recipe-based";
-    height: auto; /* let it grow as needed */
+    height: auto;
   }
 }
