fixed migrations, fixed structure of migrations, fixed import of json data files, fixed error on migrations

--- a/favourite_tastebook/recipe_manager/static/css/style.css
+++ b/favourite_tastebook/recipe_manager/static/css/style.css
@@ -14,7 +14,7 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 25% 20% 55%; /* Центральный блок стал уже */
+  grid-template-columns: 25% 20% 55%;
   grid-template-rows: auto auto auto;
   grid-template-areas:
     "semantic-search list-of-ingredients favorites-based"
