created redirecting for renamed page

--- a/favourite_tastebook/recipe_manager/templates/index.html
+++ b/favourite_tastebook/recipe_manager/templates/index.html
@@ -17,7 +17,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <a class="btn btn-outline-primary me-2" href="{% url 'login' %}">Login</a>
-                <a class="btn btn-outline-success" href="{% url 'our_product' %}">Our Product</a>
+                <a class="btn btn-outline-success" href="{% url 'product_features' %}">Our Product</a>
             </div>
         </div>
     </nav>
